	functions.

	* ipmiping/src/ipmiping.c, rmcpping/src/rmcpping.c,
	libfreeipmi/src/ipmi-ping.h, libfreeipmi/src/ipmi-ping.c: Added
	support for ipmi 2.0 ping.
------------------------------------------------------------

2006-03-02  Albert Chu <chu11@llnl.gov>

	* Globally rename ipmi_lan_check_session_authcode to
	ipmi_lan_check_session_authentication_code.
	
2006-03-01  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Clear objects before setting in all fill functions.
	
2006-02-28  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-lan-interface.h,
	libfreeipmi/src/ipmi-lan-interface.c: Split off some code into
	ipmi-lan.h, ipmi-lan.c, ipmi-lan-utils.h, and ipmi-lan-utils.c.

	* libfreeipmi/include/freeipmi/ipmi-kcs-interface.h,
	libfreeipmi/src/ipmi-kcs-interface.c: Split off some code into
	ipmi-kcs.h and ipmi-kcs.c.

	* libfreeipmi/src/rmcp.c, libfreeipmi/include/freeipmi/rmcp.h
	(ipmi_rmcp_check_message_tag): Reverse parameters for consistency
	to other functions.

	* libfreeipmi/src/rmcp.h, libfreeipmi/src/rmcp.c: Split
	off some code into rmcp-utils.h and rmcp-utils.c.

	* libfreeipmi/src/ipmi-messaging-support-cmds.h
	(IPMI_MAX_AUTHENTICATION_CODE_LENGTH): Move define to ipmi-lan.h.
	
	* Globally re-adjust code for new files, includes, and define locations.

	* libfreeipmi/src/ipmi-error.c, libfreeipmi/include/freeipmi/ipmi-error.h
	(ipmi_kcs_strstatus_r): Moved to ipmi-kcs-interface.c.

	* libfreeipmi/include/freeipmi/ipmi-kcs-interface.h,
	libfreeipmi/include/freeipmi/ipmi-ssif-interface.h: Cleaned up by
	moving #defines into ipmi-kcs-interface.c and
	ipmi-ssif-interface.c.
	
2006-02-28  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-utils.h, libfreeipmi/src/ipmi-utils.c
	(ipmi_completion_code_check): Rename to
	ipmi_check_completion_code_success for consistency with other
	functions.

	* libfreeipmi/src/ipmi-messaging-support-cmds.c,
	libfreeipmi/include/freeipmi/ipmi-messaging-support-cmds.h